# ImageProcessing

./: CMakeLists.txt  README.md
include/ImageProcessing/: image_io.h
src/: CMakeLists.txt  image_io.cpp
test/: CMakeLists.txt  image_io_test.cpp
